--- a/css/detail_career.css
+++ b/css/detail_career.css
@@ -548,7 +548,7 @@ header{
 }
 
 .career:hover{
-    background: radial-gradient(lightskyblue,white);
+    background: radial-gradient(lightskyblue,transparent);
     border-radius: 1rem;
 }
 
@@ -557,16 +557,17 @@ header{
     height: 100%;
     align-self: center;
     position: relative;
+    text-align: center;
 }
 
-.career .imgcareer::after{
+/* .career .imgcareer::after{
     content: "";
     width: 0.5px;
     height: 100%;
     right: 10%;
     position: absolute;
     background-color: gainsboro;
-}
+} */
 
 .career .imgcareer>img{
     width: 80%;
@@ -647,7 +648,7 @@ header{
 }
 
 .topcmp:hover{
-    background: radial-gradient(rgba(135, 206, 250, 0.4),whitesmoke);
+    background: radial-gradient(rgba(135, 206, 250, 0.4),transparent);
     border-radius: 1rem;
 }
 
